# rl-allocator

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md
docs/decisions/: 0001-simplex-weight-action.md  0002-causal-next-bar-reward.md  0003-parity-oracle.md  0004-walk-forward-served-path.md  0005-dsr-confidence-gate.md  0006-onnx-policy-serve.md
scripts/: train_committed_policy.py
src/rlallocator/: __init__.py  _constants.py  _exceptions.py  _manifest.py  _rng.py  _typing.py  _validation.py  cli.py  costs.py  plots.py  serve.py  train.py  walk_forward.py
src/rlallocator/agents/: __init__.py  baselines.py  onnx_policy.py  ppo.py
src/rlallocator/artifacts/: README.md  metrics.json  policy.onnx
src/rlallocator/data/: __init__.py  loaders.py  synthetic.py
src/rlallocator/data_providers/: __init__.py  polygon.py
src/rlallocator/env/: __init__.py  backtester.py  parity.py  portfolio_env.py
src/rlallocator/evaluation/: __init__.py  diebold_mariano.py  dsr.py  metrics.py  pbo.py  seed_lottery.py  verdict.py
tests/: conftest.py
tests/integration/: test_serve_end_to_end.py  test_train_pipeline_torch_free.py
tests/parity/: test_kernels_parity.py  test_onnx_torch_parity.py  test_parity_oracle.py
tests/property/: test_env_properties.py
tests/regression/: test_honest_null_and_sanity.py  test_leaky_negative_control.py  test_served_path_walk_forward.py  test_verdict_truth_table.py
tests/unit/: test_baselines.py  test_cli.py  test_coverage_fill.py  test_coverage_fill_2.py  test_coverage_fill_3.py  test_data.py  test_data_loaders.py  test_data_structure.py  test_env_backtester.py  test_env_loaders_edges.py  test_evaluation_edges.py  test_import_purity.py  test_infra_edges.py  test_onnx_policy.py  test_onnx_policy_runtime.py  test_polygon_provider.py  test_ppo_agent.py  test_pure_kernels.py  test_serve_cli_plots.py  test_serve_no_torch.py  test_validation_simplex.py
